--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 </div>
 <div id="footer">
 <h1>WebSockets</h1>
-<h2>seitenbau.de &amp; laut.de dev-day 2010</h2>
+<h2>Seitenbau Developer Convention 2010</h2>
 </div>
 </div>
 
@@ -48,6 +48,8 @@
 h1. WebSockets
 
 h2. Niko Dittmann
+
+h2. "http://github.com/niko":http://github.com/niko
 
 ::slide::
 
