--- a/public/ws_demo/mouse.html
+++ b/public/ws_demo/mouse.html
@@ -4,28 +4,38 @@
     <!-- <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script> -->
     <script src='jquery.min.js'></script>
     <script>
-      $(function(){
+      _open_ws = function(){
         ws = new WebSocket(document.location.toString().replace('http:','ws:').replace(/:\d+\/.*/,":8080/"));
-        ws.onmessage = function(evt) {
-          var data = evt.data.split(',');
-          var i = data[0];
-          var x = parseInt(data[1]);
-          var y = parseInt(data[2]);
-          if ( $('#i' + i).length == 0 ){
-            var div = "<div id=i"+ i +" style='position:absolute;'>"+ i +"</div>";
-            $(div).appendTo("body");
-          }
-          $('#i'+i).css({
-            "left" : x +"px",
-            "top" : y - 20 +"px"
-          });
-          $('#counter').html( parseInt($('#counter').text()) + 1 )
-        }; // ws.om
+        ws.onmessage = _on_message;
+        $(document).mousemove(function(e){ ws.send(e.pageX +','+ e.pageY) });
+      };
+      _close_ws = function(){
+        ws.close();
+      };
+      _on_message = function(evt){
+        var data = evt.data.split(',');
+        var i = data[0];
+        var x = parseInt(data[1]);
+        var y = parseInt(data[2]);
+        if ( $('#i' + i).length == 0 ){
+          var div = "<div id=i"+ i +" style='position:absolute;'>"+ i +"</div>";
+          $(div).appendTo("body");
+        }
+        $('#i'+i).css({
+          "left" : x +"px",
+          "top" : y - 20 +"px"
+        });
+        $('#counter').html( parseInt($('#counter').text()) + 1 )
+      }
+      $(function(){
+        $('#open').click(_open_ws);
+        $('#close').click(_close_ws);
       }); // doc.ready
-      $(document).mousemove(function(e){  ws.send(e.pageX +','+ e.pageY) });
     </script>
   </head>
   <body>
     <div id="counter">0</div>
+    <a href="#open" id="open">Open</a>
+    <a href="#close" id="close">Close</a>
   </body>
 </html>
