--- a/public/ws_demo/mouse.html
+++ b/public/ws_demo/mouse.html
@@ -1,36 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script> -->
     <script src='jquery.min.js'></script>
     <script>
+      if (!window.WebSocket){ alert("WebSocket not supported by this browser"); };
+
       _open_ws = function(){
         ws = new WebSocket(document.location.toString().replace('http:','ws:').replace(/:\d+\/.*/,":8080/"));
         ws.onmessage = _on_message;
         $(document).mousemove(function(e){ ws.send(e.pageX +','+ e.pageY) });
       };
+
       _close_ws = function(){
         ws.close();
       };
+
+      enshure_pointer = function(i){
+        if ( $('#i' + i).length == 0 ){
+          var div = "<div id=i"+ i +" style='position:absolute;'>"+ i +"</div>";
+          $(div).appendTo("body");
+        }
+      }
+
+      position_pointer = function(i,x,y){
+        $('#i'+i).css({
+          "left" : x +"px",
+          "top" : y - 20 +"px"
+        });
+      }
+
+      increment_counter = function(){
+        $('#counter').html( parseInt($('#counter').text()) + 1 )
+      }
+
       _on_message = function(evt){
         var data = evt.data.split(',');
         var i = data[0];
         var x = parseInt(data[1]);
         var y = parseInt(data[2]);
-        if ( $('#i' + i).length == 0 ){
-          var div = "<div id=i"+ i +" style='position:absolute;'>"+ i +"</div>";
-          $(div).appendTo("body");
-        }
-        $('#i'+i).css({
-          "left" : x +"px",
-          "top" : y - 20 +"px"
-        });
-        $('#counter').html( parseInt($('#counter').text()) + 1 )
-      }
+
+        enshure_pointer(i);
+        position_pointer(i,x,y);
+        increment_counter();
+      };
+
       $(function(){
         $('#open').click(_open_ws);
         $('#close').click(_close_ws);
-      }); // doc.ready
+      });
     </script>
   </head>
   <body>
