--- a/public/ws_demo/twitter.html
+++ b/public/ws_demo/twitter.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script> -->
     <script src='jquery.min.js'></script>
+
+    <script type="text/javascript" src="web-socket-js/swfobject.js"></script>
+    <script type="text/javascript" src="web-socket-js/FABridge.js"></script>
+    <script type="text/javascript" src="web-socket-js/web_socket.js"></script>
+
     <script>
-      $(function(){
-        ws = new WebSocket("ws://localhost:8080/");
-        ws.onmessage = function(tweet) { $('#tweets').prepend(tweet.data); };
-      });
+      WebSocket.__swfLocation = "web-socket-js/WebSocketMain.swf";
+
+      start = function(){
+        ws_location = document.location.toString().replace('http:','ws:').replace(/:\d+\/.*/,":8080/");
+        ws = new WebSocket(ws_location);
+        ws.onmessage = function(tweet){ $('#tweets').prepend("<li>"+tweet.data+"</li>"); };
+      };
     </script>
+    <style>
+      body{font-family:sans-serif;}
+      img{margin:10px;}
+      ul{list-style-type:none;}
+      b{font-size:200%;}
+    </style>
   </head>
   <body>
-    <pre><code id="tweets"></code></pre>
+    <ul id="tweets">
+    </ul>
+    <a href="#" onclick="start()">Start</a>
   </body>
 </html>
