+ moved img references, added forkme & yeah img

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <!-- embedded styles -->
     <style type="text/css" media="all">
       iframe{border:none; width:29em; height:14em;}
+      #slide0 img{ float:left; margin-left:6em; }
     </style>
     <!-- S5 JS -->
     <script src="ui/default/slides.js" type="text/javascript"></script>
@@ -51,21 +52,19 @@ h2. Niko Dittmann
 
 h2. "http://github.com/niko":http://github.com/niko
 
+!pix/forkme.png!
+
 ::slide::
 
 h1. Server muss Daten an Client pushen
 
 !pix/push.jpg!
 
-h3. (cc via "http://www.flickr.com/photos/vidiot":http://www.flickr.com/photos/vidiot)
-
 ::slide::
 
 h1. Lösungen bisher
 
 !pix/polling.jpg!
-
-h3. (cc via "http://www.flickr.com/photos/chodhound":http://www.flickr.com/photos/chodhound)
 
 ::slide::
 
@@ -89,8 +88,6 @@ h2. Stehende Verbindung zwischen Client & Server
 h1. Potenzielle Haken
 
 !pix/haken.jpg!
-
-h3. (cc via "http://www.flickr.com/photos/donvanone":http://www.flickr.com/photos/donvanone)
 
 ::slide::
 
@@ -125,8 +122,6 @@ h1. Sicherheit
 
 !pix/security.jpg!
 
-h3. (cc via "http://www.flickr.com/photos/aquilaonline":http://www.flickr.com/photos/aquilaonline)
-
 ::slide::
 
 h1. Sicherheit
@@ -141,8 +136,6 @@ h1. Sicherheit
 h1. Proxies & Firewalls
 
 !pix/wall.jpg!
-
-h3. (cc via "http://www.flickr.com/photos/joriel":http://www.flickr.com/photos/joriel)
 
 ::slide::
 
@@ -246,7 +239,6 @@ EventMachine::WebSocket.start(:host => '0.0.0.0', :port => 8081) do |ws|
 end
 ruby::
 
-
 ::slide::
 
 h1. Webentwicklung in der Zukunft
@@ -297,6 +289,20 @@ h2. Weiterführend
 * "twitter-stream ruby gem":http://github.com/voloko/twitter-stream
 * "Seaside - Continuation-basiertes Web-Framework in Smalltalk":http://seaside.st/
 * "Wee - Continuation-basiertes Web-Framework in Ruby":http://github.com/mneumann/wee
+
+::slide::
+
+h1. Bilder
+
+h2. in dieser Reihenfolge:
+
+* "flickr.com/photos/vidiot":http://www.flickr.com/photos/vidiot
+* "flickr.com/photos/chodhound":http://www.flickr.com/photos/chodhound
+* "flickr.com/photos/donvanone":http://www.flickr.com/photos/donvanone
+* Screenshot: Mit 'links' auf laut.de
+* "flickr.com/photos/aquilaonline":http://www.flickr.com/photos/aquilaonline
+* "flickr.com/photos/joriel":http://www.flickr.com/photos/joriel
+* "failblog.org":http://failblog.org
 
     </div>
   </body>
