--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,34 @@
     <meta name="author" content="Niko Dittmann" />
     <meta name="company" content="restorm AG" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Script-Type" content="text/javascript" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+
     <!-- configuration parameters -->
     <meta name="defaultView" content="slideshow" />
     <meta name="controlVis" content="hidden" />
+
+    <!-- configuration extensions -->
+    <meta name="tranSitions" content="false" />
+    <meta name="fadeDuration" content="200" />
+    <meta name="incrDuration" content="200" />
+    <!-- configuration autoplay extension -->
+    <meta name="autoMatic" content="false" />
+    <meta name="playLoop" content="true" />
+    <meta name="playDelay" content="10" />
+    <!-- configuration audio extension -->
+    <meta name="audioSupport" content="false" />
+    <meta name="audioVolume" content="100" />
+    <meta name="audioError" content="false" />
+    <!-- configuration audio debug -->
+    <meta name="audioDebug" content="false" />
+
     <!-- style sheet links -->
     <link rel="stylesheet" href="ui/default/slides.css" type="text/css" media="projection" id="slideProj" />
     <link rel="stylesheet" href="ui/default/outline.css" type="text/css" media="screen" id="outlineStyle" />
     <link rel="stylesheet" href="ui/default/print.css" type="text/css" media="print" id="slidePrint" />
     <link rel="stylesheet" href="ui/default/opera.css" type="text/css" media="projection" id="operaFix" />
+
     <link rel="stylesheet" href="ui/laut/laut.css" type="text/css" />
 
     <!-- embedded styles -->
